# Flobbel

./: .gitignore  CMakeLists.txt  FlobbelSafe.cpp  FlobbelSafe.h  flob_exceptions.cpp  flob_exceptions.h  global_constants.h  global_functions.cpp  global_functions.h  logging.cpp  logging.h  main.cpp  system_information.bat  testmain.cpp
CaptureCollection/: CMakeLists.txt  capturecollection.cpp  capturecollection.h  capturetypes.h  info_type.cpp  info_type.h  keypress_type.cpp  keypress_type.h  metadatatype.cpp  metadatatype.h  mouse_type.cpp  mouse_type.h  process_type.cpp  process_type.h  screentime_type.cpp  screentime_type.h
FileServerBackend/: CMakeLists.txt  FileManagement.cpp  FileManagement.h  FileServerDB.sql  NetworkRequests.cpp  NetworkRequests.h  main.cpp
FlobbelBackbone/: CMakeLists.txt  global_constants.h  global_functions.cpp  global_functions.h
FlobbelCallbackCollection/: CMakeLists.txt  flobcallbackcollection.cpp  flobcallbackcollection.h
FlobbelSafe/: CMakeLists.txt  FlobbelSafe.cpp  FlobbelSafe.h  rawdataprocessing.cpp  rawdataprocessing.h
FlobbelSafe/Webside/: dbconnect.php
FlobbelSync/: CMakeLists.txt
FlobbelWebStuff/: CMakeLists.txt  FlobWS.cpp  FlobWS.h
PHPScripts/: blacklist.php  dbstructure.sql  fillup.sql  register.php
Ritualkacke/: sqlpassingtypes.cpp  sqlpassingtypes.h
dependencies/sqlite/: CMakeLists.txt
